// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls out live ballot sheets in test mode 1`] = `
<div>
  <div
    class="sc-dPiKHq byFUxy"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz bQMNvi"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </nav>
    </div>
    <main
      class="sc-llYToB ckiwBe"
    >
      <div
        class="sc-crrsfI cHUPes"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-iqHYGH hIYxPX"
          >
            Live Ballot
          </div>
          <p>
            This ballot 
            <strong>
              has not yet been tabulated
            </strong>
            . What would you like to do?
          </p>
          <p>
            Remove the LIVE ballot before continuing.
          </p>
        </div>
        <div
          class="sc-dQppl ecRvSa"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`calls out test ballot sheets in live mode 1`] = `
<div>
  <div
    class="sc-dPiKHq byFUxy"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz bQMNvi"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </nav>
    </div>
    <main
      class="sc-llYToB ckiwBe"
    >
      <div
        class="sc-crrsfI cHUPes"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-iqHYGH hIYxPX"
          >
            Test Ballot
          </div>
          <p>
            This ballot 
            <strong>
              has not yet been tabulated
            </strong>
            . What would you like to do?
          </p>
          <p>
            Remove the TEST ballot before continuing.
          </p>
        </div>
        <div
          class="sc-dQppl ecRvSa"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is blank if it is 1`] = `
<div>
  <div
    class="sc-dPiKHq byFUxy"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz iulVCQ"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </nav>
    </div>
    <main
      class="sc-llYToB ckiwBe"
    >
      <div
        class="sc-crrsfI cHUPes"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-iqHYGH hIYxPX"
          >
            Blank Ballot
          </div>
          <p>
            This ballot 
            <strong>
              has not yet been tabulated
            </strong>
            . What would you like to do?
          </p>
          <p>
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Don't Count It
            </button>
          </p>
          <p>
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Count It As Is
            </button>
          </p>
        </div>
        <div
          class="sc-dQppl ecRvSa"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is overvoted if it is 1`] = `
<div>
  <div
    class="sc-dPiKHq byFUxy"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz iulVCQ"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </nav>
    </div>
    <main
      class="sc-llYToB ckiwBe"
    >
      <div
        class="sc-crrsfI cHUPes"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-iqHYGH hIYxPX"
          >
            Overvote
          </div>
          <p>
            This ballot 
            <strong>
              has not yet been tabulated
            </strong>
            . What would you like to do?
          </p>
          <p>
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Don't Count It
            </button>
          </p>
          <p>
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Count It As Is
            </button>
          </p>
        </div>
        <div
          class="sc-dQppl ecRvSa"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is undervoted if it is 1`] = `
<div>
  <div
    class="sc-dPiKHq byFUxy"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz iulVCQ"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </nav>
    </div>
    <main
      class="sc-llYToB ckiwBe"
    >
      <div
        class="sc-crrsfI cHUPes"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-iqHYGH hIYxPX"
          >
            Undervote
          </div>
          <p>
            This ballot 
            <strong>
              has not yet been tabulated
            </strong>
            . What would you like to do?
          </p>
          <p>
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Don't Count It
            </button>
          </p>
          <p>
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Count It As Is
            </button>
          </p>
        </div>
        <div
          class="sc-dQppl ecRvSa"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the sheet is unreadable if it is 1`] = `
<div>
  <div
    class="sc-dPiKHq byFUxy"
  >
    <div
      class="sc-eCssSg jAJyXG"
    >
      <nav
        class="sc-jSgupP dvPmoJ"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz bQMNvi"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </nav>
    </div>
    <main
      class="sc-llYToB ckiwBe"
    >
      <div
        class="sc-crrsfI cHUPes"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-iqHYGH hIYxPX"
          >
            Unreadable
          </div>
          <p>
            This ballot 
            <strong>
              has not yet been tabulated
            </strong>
            . What would you like to do?
          </p>
          <p>
            There was a problem reading the ballot. Remove ballot and reload in the scanner to try again.
          </p>
          <p>
            If the error persists remove ballot and create a duplicate ballot for the Resolution Board to review.
          </p>
        </div>
        <div
          class="sc-dQppl ecRvSa"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          748dc61ad3
        </strong>
      </div>
    </div>
  </div>
</div>
`;
